--- a/index.html
+++ b/index.html
@@ -7,34 +7,34 @@
     <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Portfolio Silje Møgster</h1>
+    <h1>Portfolio</h1>
     <div class="project-container">
         <div class="project-card">
             <h2>Square Eyes Movies</h2>
             <img src="images/SquareEyesMoviesWebsite.png" alt="Screen shot of the website Square Eyes Movies">
             <p>Square Eyes is a video streaming platform connecting film lovers with high-quality, independent films. Square Eyes is a cross-course project aimed at creating a user-friendly web application for film enthusiasts aged 25-40.
             </p>
-            <a href="https://github.com/dittbrukernavn/prosjekt1" target="_blank">GitHub Repo</a>
+            <a href="https://github.com/siljemogster/js1-ca/tree/squareeyes-cms-ca" target="_blank">GitHub Repo</a>
             <br>
-            <a href="https://dinside.no/prosjekt1" target="_blank">Live Site</a>
+            <a href="https://squareeyes-cms-ca.netlify.app/" target="_blank">Live Site</a>
         </div>
         <div class="project-card">
             <h2>Community Science Museum</h2>
             <img src="images/CommunityScienceMuseumWebsite.png" alt="Screen shot of the website Community Science Museum">
             <p>A youth-friendly and playful website for a science museum, designed to appeal to middle school children (ages 7-15) and families with young children.
             </p>
-            <a href="https://github.com/dittbrukernavn/prosjekt2" target="_blank">GitHub Repo</a>
+            <a href="https://github.com/siljemogster/sciencemuseum" target="_blank">GitHub Repo</a>
             <br>
-            <a href="https://dinside.no/prosjekt2" target="_blank">Live Site</a>
+            <a href="https://community-science-museum-norway.netlify.app/" target="_blank">Live Site</a>
         </div>
         <div class="project-card">
             <h2>Roaming Roots</h2>
             <img src="images/RoamingRootsWebsite.png" alt="Screen shot of website Roaming Root">
             <p>Roaming Roots is a travel blog focused on uncovering hidden gems around the world, designed to inspire wanderlust and provide valuable travel tips. Roaming Roots is a project created as part of Project Exam 1. The blog aims to showcase hidden travel destinations and inspire readers to plan their next adventure.
             </p>
-            <a href="https://github.com/dittbrukernavn/prosjekt3" target="_blank">GitHub Repo</a>
+            <a href="https://github.com/siljemogster/roamingroots/tree/v1.1" target="_blank">GitHub Repo</a>
             <br>
-            <a href="https://dinside.no/prosjekt3" target="_blank">Live Site</a>
+            <a href="https://roamingroots.netlify.app/" target="_blank">Live Site</a>
         </div>
     </div> 
 </body>
