--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
-    <h1>Portfolio</h1>
+    <h1>Portfolio Silje Møgster</h1>
     <div class="project-container">
         <div class="project-card">
             <h2>Square Eyes Movies</h2>
