--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </p>
             <a href="https://github.com/siljemogster/js1-ca/tree/squareeyes-cms-ca" target="_blank">GitHub Repo</a>
             <br>
-            <a href="https://squareeyes-cms-ca.netlify.app/" target="_blank">Live Site</a>
+            <a href="https://squareeyes-updatedversion.netlify.app/" target="_blank">Live Site</a>
         </div>
         <div class="project-card">
             <h2>Community Science Museum</h2>
