--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <img src="images/SquareEyesMoviesWebsite.png" alt="Screen shot of the website Square Eyes Movies">
             <p>Square Eyes is a video streaming platform connecting film lovers with high-quality, independent films. Square Eyes is a cross-course project aimed at creating a user-friendly web application for film enthusiasts aged 25-40.
             </p>
-            <a href="https://github.com/siljemogster/js1-ca/tree/squareeyes-cms-ca" target="_blank">GitHub Repo</a>
+            <a href="https://github.com/siljemogster/js1-ca/tree/v1" target="_blank">GitHub Repo</a>
             <br>
-            <a href="https://squareeyes-updatedversion.netlify.app/" target="_blank">Live Site</a>
+            <a href="https://squareeyesmoviesv1.netlify.app/" target="_blank">Live Site</a>
         </div>
         <div class="project-card">
             <h2>Community Science Museum</h2>
